--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,45 +1,35 @@
-name: Simple AHK v2 Package
+name: Compile AHK v2 Script
 
 on: [push, workflow_dispatch]
 
 jobs:
-  package:
+  compile:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Download AutoHotkey64.exe
-      run: |
-        # Download just the AutoHotkey64.exe
-        curl -LO https://github.com/AutoHotkey/AutoHotkey/releases/download/v2.0.11/AutoHotkey_2.0.11.zip
-        7z x AutoHotkey_2.0.11.zip AutoHotkey64.exe -o. -r
-        
-    - name: Create portable package
-      shell: powershell
-      run: |
-        # Create a simple launcher batch file
-        @'
-@echo off
-chcp 65001 >nul
-title AutoReSizer
-echo Starting AutoReSizer...
-if exist "AutoHotkey64.exe" (
-    start "" "AutoHotkey64.exe" "AutoReSizer.ahk"
-) else (
-    echo Error: AutoHotkey64.exe not found!
-    pause
-)
-'@ | Out-File -Encoding ASCII "Run_AutoReSizer.bat"
-        
-        # Also create a simple executable wrapper (batch to exe)
-        # We'll use a pre-made tool or create a simple one
-        echo Creating package...
-        
-        # Zip everything together
-        7z a -tzip AutoReSizer_Portable.zip AutoReSizer.ahk AutoHotkey64.exe Deutsch.lng English.lng README.md Run_AutoReSizer.bat
-        
-    - name: Upload portable package
-      uses: actions/upload-artifact@v4
-      with:
-        name: AutoReSizer-Portable
-        path: AutoReSizer_Portable.zip
+      - uses: actions/checkout@v4
+
+      - name: Download AutoHotkey
+        shell: pwsh
+        run: |
+          Invoke-WebRequest https://www.autohotkey.com/download/ahk.zip -OutFile ahk.zip
+          Expand-Archive ahk.zip C:\AutoHotkey
+
+      - name: Compile
+        shell: pwsh
+        run: |
+          $ahk2exe = "C:\AutoHotkey\Compiler\Ahk2Exe.exe"
+          $bin     = "C:\AutoHotkey\v2\AutoHotkey64.exe"
+
+          & $ahk2exe `
+            /in AutoReSizer.ahk `
+            /out AutoReSizer.exe `
+            /bin $bin
+
+          if (!(Test-Path AutoReSizer.exe)) {
+            Write-Error "Compilation failed"
+          }
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: AutoReSizer
+          path: AutoReSizer.exe
