--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -46,3 +46,5 @@ jobs:
             AutoReSizer.exe
             Deutsch.lng
             English.lng
+            license.txt
+            readme.txt
